[package]
name = "volition"
version = "0.0.19"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/volition"
homepage = "https://github.com/shockham/volition"
documentation = "https://docs.rs/volition/"
description = "Minimalist input lib"

[dependencies]
winit = "0.19"
