[package]
name = "volition"
version = "0.1.3"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/volition"
homepage = "https://github.com/shockham/volition"
documentation = "https://docs.rs/volition/"
description = "Minimalist input lib"
edition = "2018"

[dependencies]
winit = "0.21"
